--- a/.github/workflows/cron_scrap.yml
+++ b/.github/workflows/cron_scrap.yml
@@ -2,8 +2,8 @@ name: scrapes yahoo
 
 on:
   push:
-  schedule:
-    - cron: '*/15 * * * *'
+  #schedule:
+    #- cron: '*/15 * * * *'
 
 permissions: write-all
 
